Altered video show container max width to prevent text overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1007,6 +1007,7 @@ textarea {
 .video-show-container {
   padding-right: 24px;
   height: auto;
+  max-width: 679px;
   margin-left: 34px;
 }
 
